--- a/xss/production/test/3js_carousel.html
+++ b/xss/production/test/3js_carousel.html
@@ -151,7 +151,7 @@ application.events.dispatch("updates", []);
 application.events.dispatch("switch_cameras", []);
 }
 var img_plane;var img_reflect;var scene;var camera_1;
-        function create_my_plane(
+    function create_my_plane(
      ) { 
     var my_plane;
 			my_plane = new THREE.Object3D();
@@ -178,15 +178,13 @@ my_plane.scale.y = 1;
 	);
 		application.are_obj_events = true;
             var img_plane;
-	    img_plane_plane = 
-		new THREE.Plane(128, 164, null, null) ;
+	    img_plane_plane = new THREE.Plane(128, 164, null, null) ;
 	    img_plane = new THREE.Mesh(img_plane_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(img_plane);
 		img_plane.events = new ms.event.EventHolder();
 				my_plane.addChild(img_plane);
             var img_reflect;
-	    img_reflect_plane = 
-		new THREE.Plane(128, 164, null, null) ;
+	    img_reflect_plane = new THREE.Plane(128, 164, null, null) ;
 	    img_reflect = new THREE.Mesh(img_reflect_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(img_reflect);
 		img_reflect.events = new ms.event.EventHolder();
@@ -249,37 +247,22 @@ threejs_load_resources(function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    __label1 = 
-<<<<<<< HEAD
 			new ms.ui.Label(g_ui_root.manager, g_ui_root, "15px Verdana");
-=======
-			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
->>>>>>> 92e6d60f1b95a9c69ab6767d7758094950a61307
         __label1 = __label1;
             __label1.set_x(150);
             __label1.set_y(75);
             __label1.set_color("Ivory");
             __label1.text("Move mouse to control the carousel movement");
 		    lbl1 = 
-<<<<<<< HEAD
 			new ms.ui.Label(g_ui_root.manager, g_ui_root, "15px Verdana");
-=======
-			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
->>>>>>> 92e6d60f1b95a9c69ab6767d7758094950a61307
         lbl1 = lbl1;
             lbl1.set_x(175);
             lbl1.set_y(100);
             lbl1.set_color("Ivory");
             lbl1.text("Put the mouse over an image to zoom it");
-<<<<<<< HEAD
 			    scene = new THREE.Scene() ;
 		    camera_1 = 
 		    new THREE.Camera(45, 1.5, 1, 10000, null) ;	
-=======
-			scene = 
-			new THREE.Scene() ;
-		camera_1 = 
-		new THREE.Camera(45, 1.5, 1, 10000, null) ;	
->>>>>>> 92e6d60f1b95a9c69ab6767d7758094950a61307
 		active_camera = camera_1;
             camera_1.position.x = 500;
             camera_1.position.y = 500;
